--- a/server/src/.env
+++ b/server/src/.env
@@ -1,6 +1,6 @@
 MQTT_BROKER_URL=mqtt://broker.emqx.io
 MQTT_TOPIC="attendance/logs"
-
+MONGO_URI=mongodb://localhost:27017/timekeeping
 PORT=1883
 
 MQTT_USERNAME=
